<resources>
    <string name="app_name">Medami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="your_number">Enter phone number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_account">Create Account</string>
    <string name="next">Continue</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>

</resources>